[gd_scene load_steps=31 format=2]

[ext_resource path="res://WhiteColor.tres" type="Shader" id=1]
[ext_resource path="res://Enemies/Bird.png" type="Texture" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Bird.gd" type="Script" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Stand",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "Land",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Take Off",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="CircleShape2D" id=8]
radius = 55.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.0
height = 4.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bird" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 6 )
frames = SubResource( 7 )
animation = "Stand"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.305882 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[node name="CautionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="CautionTimer" to="." method="_on_CautionTimer_timeout"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
